# simulation

src/simulation/: package.xml  setup.cfg  setup.py
src/simulation/launch/: gazebo_launch.py
src/simulation/resource/: car.xacro  conde_world.world  lane_track.world  robot.xacro  track.world
src/simulation/resource/models/conde_world/: model.sdf
src/simulation/simulation/: lane_following.py  visualization.py
